infrastructure/services/dev/policies/tests/generate-rbac/generated-canary.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: vcluster
  namespace: preview-canary
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: preview-vcluster
subjects:
- kind: ServiceAccount
  name: vc-vcluster
  namespace: preview-canary
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: preview-reader
  namespace: preview-canary
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: preview-kubeconfig-reader
subjects:
- kind: ServiceAccount
  name: preview-reader
  namespace: dev-platform
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: dagger-devs-view
  namespace: preview-canary
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: dagger-devs
