infrastructure/services/dev/policies/tests/generate-rbac/generated-pr.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: vcluster
  namespace: preview-pr-12
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: preview-vcluster
subjects:
- kind: ServiceAccount
  name: vc-vcluster
  namespace: preview-pr-12
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: preview-reader
  namespace: preview-pr-12
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: preview-kubeconfig-reader
subjects:
- kind: ServiceAccount
  name: preview-reader
  namespace: dev-platform
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: dagger-devs-view
  namespace: preview-pr-12
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: dagger-devs
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: preview-driver
  namespace: preview-pr-12
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: preview-driver-namespaced
subjects:
- kind: ServiceAccount
  name: preview-driver
  namespace: dev-platform
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: preview-reaper
  namespace: preview-pr-12
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: preview-reaper-delete
subjects:
- kind: ServiceAccount
  name: preview-reaper
  namespace: dev-platform
