infrastructure/services/dev/policies/tests/generate-rbac/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preview-pr-12
  labels:
    preview.eliorion.fr/tier: preview
    preview.eliorion.fr/pr: '12'
---
apiVersion: v1
kind: Namespace
metadata:
  name: preview-canary
  labels:
    preview.eliorion.fr/tier: preview
